tests/struct/assign_wrong_type_self.rz
struct Foo {
    a: int

    fn init(b: str) {
        self.a = b // error: trying to assign value of type 'str' to variable of type 'int'
    }
}